feat: Add Charts & adding googlemap

--- a/style/style.css
+++ b/style/style.css
@@ -25,3 +25,12 @@
 .list-group-item:hover {
     background-color: #eee;
 }
+
+.input-group {
+    margin: 20px 0px;
+}
+
+td, th {
+    vertical-align: middle !important;
+    text-align: center !important;
+}
